# provide-workspace

./: .gitignore  .lychee.toml  AGENTS.md  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  wrknv.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  links.yml  publish.yml  release.yml
docs/: ai.md  deploying-wrknv-tasks.md  getting-started.md  index.md  link-checking.md  wrknv-task-reference.md
docs/development-tools/: index.md
docs/foundation/: index.md
docs/foundry/: architecture.md  index.md  principles.md
docs/guides/: building-docs.md  development-workflow.md  documentation.md  ide-setup.md  index.md  installation.md  packaging.md  provider-development.md  testing-patterns.md  testing.md
docs/pyvider-framework/: index.md
docs/terraform-providers/: index.md
scripts/: add_spdx_headers.py  gen_monorepo_ref_pages.py  validate_docs.sh  validate_partials.py  validate_spdx_headers.py  validate_standardization.py
site/: 404.html  index.html  objects.inv  sitemap.xml
site/CONTRIBUTING-DOCS/: index.html
site/ai/: index.html
site/ci-tooling/: index.html
site/ci-tooling/actions/: index.html
site/ci-tooling/actions/python-ci/: index.html
site/ci-tooling/actions/python-release/: index.html
site/ci-tooling/actions/setup-python-env/: index.html
site/ci-tooling/ci-monitoring-patterns/: index.html
site/ci-tooling/ci-orchestrator-design/: index.html
site/ci-tooling/getting-started/installation/: index.html
site/ci-tooling/getting-started/quick-start/: index.html
site/ci-tooling/pre-commit-hooks/: index.html
site/ci-tooling/workflows/: index.html
site/ci-tooling/workflows/python-ci/: index.html
site/ci-tooling/workflows/python-release/: index.html
site/deploying-wrknv-tasks/: index.html
site/development-tools/: index.html
site/flavorpack/: index.html
site/flavorpack/api/: index.html
site/flavorpack/api/builder/: index.html
site/flavorpack/api/crypto/: index.html
site/flavorpack/community/: index.html
site/flavorpack/cookbook/: index.html
site/flavorpack/development/: index.html
site/flavorpack/getting-started/: index.html
site/flavorpack/guide/: index.html
site/flavorpack/resources/: index.html
site/flavorpack/roadmap/: index.html
site/flavorpack/stylesheets/: extra.css  provide-theme.css
site/flavorpack/troubleshooting/: index.html
site/flavorpack/tutorials/: index.html
site/foundation/: index.html
site/foundry/: index.html
site/foundry/architecture/: index.html
site/foundry/principles/: index.html
site/getting-started/: index.html
site/guides/: index.html
site/guides/building-docs/: index.html
site/guides/development-workflow/: index.html
site/guides/documentation/: index.html
site/guides/ide-setup/: index.html
site/guides/installation/: index.html
site/guides/packaging/: index.html
site/guides/provider-development/: index.html
site/guides/testing/: index.html
site/guides/testing-patterns/: index.html
site/link-checking/: index.html
site/plating/: index.html
site/plating/api/: index.html
site/plating/api-reference/: index.html
site/plating/authoring-bundles/: index.html
site/plating/capabilities/: index.html
site/plating/cli-reference/: index.html
site/plating/examples/: index.html
site/plating/getting-started/: index.html
site/plating/performance/: index.html
site/plating/quick-start/: index.html
site/plating/registry-pattern/: index.html
site/plating/troubleshooting/: index.html
site/provide-foundation/: index.html
site/provide-foundation/ecosystem/: index.html
site/provide-foundation/getting-started/: index.html
site/provide-foundation/javascripts/: mermaid-init.js
site/provide-foundation/reference/: index.html
site/provide-foundation/specs/: index.html
site/provide-foundation/stylesheets/: extra.css
site/provide-testkit/: index.html
site/provide-testkit/SECURITY_SCANNERS/: index.html
site/provide-testkit/api/: index.html
site/provide-testkit/getting-started/: index.html
site/provide-testkit/quality_guide/: index.html
site/pyvider/: index.html
site/pyvider-components/: index.html
site/pyvider-cty/: index.html
site/pyvider-cty/api/: index.html
site/pyvider-cty/getting-started/: index.html
site/pyvider-cty/how-to/: index.html
site/pyvider-cty/user-guide/: index.html
site/pyvider-framework/: index.html
site/pyvider-hcl/: index.html
site/pyvider-hcl/architecture/: index.html
site/pyvider-hcl/getting-started/: index.html
site/pyvider-hcl/guide/: index.html
site/pyvider-hcl/reference/: index.html
site/pyvider-rpcplugin/: index.html  requirements.txt
site/pyvider-rpcplugin/development/: index.html
site/pyvider-rpcplugin/examples/: index.html
site/pyvider-rpcplugin/getting-started/: index.html
site/pyvider-rpcplugin/guide/: index.html
site/pyvider-rpcplugin/introduction/: index.html
site/pyvider-rpcplugin/reference/: index.html
site/pyvider-rpcplugin/stylesheets/: extra.css
site/pyvider/api/: index.html
site/pyvider/faq/: index.html
site/pyvider/getting-started/: index.html
site/pyvider/glossary/: index.html
site/pyvider/quick-reference/: index.html
site/pyvider/troubleshooting/: index.html
site/supsrc/: index.html
site/supsrc/api/: index.html
site/supsrc/configuration/: index.html
site/terraform-provider-pyvider/: index.html
site/terraform-provider-tofusoup/: index.html
site/terraform-provider-tofusoup/architecture/: index.html
site/terraform-provider-tofusoup/use-cases/: index.html
site/terraform-providers/: index.html
site/tofusoup/: index.html
site/tofusoup/CHANGELOG/: index.html
site/tofusoup/api/: index.html
site/tofusoup/ci/: index.html
site/tofusoup/examples/: index.html
site/tofusoup/faq/: index.html
site/tofusoup/glossary/: index.html
site/tofusoup/troubleshooting/: index.html
site/tofusoup/tutorials/: index.html
site/wrknv/: index.html
site/wrknv-task-reference/: index.html
site/wrknv/getting-started/: index.html
src/provide/: __init__.py
src/provide/foundry/: __init__.py
tests/: __init__.py  test_markdown_export.py
(+1302 files in other folders)
