#
# provide-foundry pyproject.toml
#
# Documentation hub for the provide.io ecosystem
#

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provide-foundry"
dynamic = ["version"]
description = "Shared documentation infrastructure for provide.io ecosystem"
authors = [
    {name = "Tim Perkins", email = "code@tim.life"},
]
maintainers = [
    {name = "provide.io", email = "code@provide.io"},
]
keywords = ["documentation", "mkdocs", "ecosystem", "monorepo", "docs-hub"]
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "provide-foundation",
    "tomli>=2.2.1",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-autorefs>=1.4.0",
    "mkdocs-monorepo-plugin>=1.1.0",
    "mkdocs-macros-plugin>=1.0.0",
    "mkdocs-autolinks-plugin>=0.7.0",
    "mike>=2.1.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.0",
    "mkdocs-section-index>=0.3.0",
    "mkdocs-htmlproofer-plugin>=1.3.0",
]

[project.urls]
Homepage = "https://foundry.provide.io/provide-foundry/"
Documentation = "https://foundry.provide.io/provide-foundry/"
Repository = "https://foundry.provide.io/provide-foundry/repo"
Issues = "https://foundry.provide.io/provide-foundry/issues"

[project.entry-points."mkdocs.plugins"]
crossrepo-links = "provide.foundry.mkdocs_plugins.crossrepo_links:CrossRepoLinksPlugin"
markdown-export = "provide.foundry.mkdocs_plugins.markdown_export:MarkdownExportPlugin"

[tool.setuptools]
packages = {find = {where = ["src"]}}

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.package-data]
"provide.foundry.config" = [
    "base-mkdocs.yml",
    "Makefile.provider.tmpl",
]
"provide.foundry.docs" = [
    "*.py",
    "_partials/*.md",
]
"provide.foundry.scripts" = [
    "*.py",
]
"provide.foundry.theme" = [
    "assets/**/*",
    "data/**/*",
    "js/**/*",
    "css/**/*",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "DEBUG"
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "unit: marks unit tests",
]

[tool.ruff]
line-length = 111
indent-width = 4
target-version = "py311"
exclude = [".venv", "workenv", "build", "dist", ".git", "site"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "ANN", "B", "BLE", "C90", "PIE", "PLR", "S", "SIM", "PTH", "RUF"]
ignore = [
    "ANN401",   # any-type (too restrictive)
    "BLE001",   # blind-except (too restrictive for cleanup patterns)
    "B008",     # function-call-in-default-argument (Click uses this pattern)
    "E501",     # line-too-long (handled by formatter)
    "S101",     # assert (valid in tests)
    "S104",     # binding-to-all-interfaces (intentional for servers)
    "S108",     # hardcoded-temp-file (/tmp is fine for our use cases)
    "S310",     # suspicious-url-open-for-protocol (URLs are controlled)
    "S603",     # subprocess-without-shell-equals-true (trusted input)
    "S607",     # start-process-with-partial-path (trusted executables)
    "PLR0911",  # too-many-return-statements (refactor later)
    "PLR0912",  # too-many-branches (refactor later)
    "PLR0913",  # too-many-arguments (common in config classes)
    "PLR0915",  # too-many-statements (refactor later)
    "PLR2004",  # magic-value-comparison (too noisy)
    "SIM108",   # use-ternary-operator (style preference)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN001", "ANN002", "ANN003", "ANN201", "ANN202", "ANN204", "B017", "C901", "E402", "PLR0124", "PLR1714", "S102", "S105", "S106", "S110", "S307", "S311", "S324", "S602", "SIM105", "SIM108", "SIM117"]
# Complex configuration extraction - inherently complex
"src/provide/foundry/config/__init__.py" = ["C901"]

[tool.ruff.lint.isort]
known-first-party = ["provide", "tests"]
force-sort-within-sections = true
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ["workenv", ".venv", "build", "dist", "site"]

[[tool.mypy.overrides]]
module = [
    "mkdocs.*",
    "mkdocs_material.*",
    "mkdocstrings.*",
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/provide/foundry"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 70
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "def __repr__",
    "def __str__",
    "pass",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", "workenv"]
skips = ["B404", "B603"]  # B404: import_subprocess, B603: subprocess_without_shell_equals_true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-xdist>=3.5.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
    "types-PyYAML>=6.0.0",
]
